--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "scripts": {
     "build": "yarn build:js && yarn build:css",
     "build:js": "esbuild app/javascript/*.js --bundle --sourcemap --outdir=app/assets/builds",
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/avo-rhino_field.css -o ./app/assets/builds/avo-rhino_field.css --postcss",
+    "build:css": "npx @tailwindcss/cli -i ./app/assets/stylesheets/avo-rhino_field.css -o ./app/assets/builds/avo-rhino_field.css --postcss",
     "prod:build": "yarn prod:build:js && yarn prod:build:css",
     "prod:build:js": "esbuild app/javascript/*.js --bundle --sourcemap --minify --outdir=app/assets/builds",
     "prod:build:css": "yarn build:css"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
+    "@tailwindcss/cli": "^4.0.2",
     "@tiptap/extension-color": "^2.6.5",
     "@tiptap/extension-text-style": "^2.6.5",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
     "postcss-nested": "^6.2.0",
     "rhino-editor": "^0.10.2",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^4.0.0"
   },
   "name": "avo-rhino_field",
   "version": "1.0.0",
